--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -25,7 +25,7 @@ section, summary, time, mark, audio, video {
 	font: inherit;
 	vertical-align: baseline;}
 
-article, aside, details, figcaption, figure,
+article, aside, details, figcaption, figure,f
 footer, header, hgroup, menu, nav, section {
 	display: block;}
 
@@ -3193,7 +3193,7 @@ input, select, textarea {
 		display: flex;
 		flex-wrap: wrap;
 		list-style: none;
-		margin: 3rem 0;
+		margin: 0rem 0;
 		padding-left: 0;
 	}
 
@@ -3202,8 +3202,8 @@ input, select, textarea {
 		}
 
 		ul.feature-icons li {
-			margin: 2.5rem 0 0 0;
-			padding: 0.5rem 0 0 4.5rem;
+			margin: 2rem 0 0 0;
+			padding: 0.5rem 0 0 2rem;
 			position: relative;
 			width: 50%;
 		}
@@ -3236,12 +3236,8 @@ input, select, textarea {
 			}
 
 				ul.feature-icons li {
-					width: 100%;
+					width: 50%;
 				}
-
-					ul.feature-icons li:nth-child(2) {
-						margin-top: 2rem;
-					}
 
 		}
 
