remove not used code

--- a/assets/sass/libs/_vars.scss
+++ b/assets/sass/libs/_vars.scss
@@ -1,13 +1,11 @@
 // Misc.
 	$misc: (
-		z-index-base:				10000,
-		gallery-lightbox-opacity:	0.875
+		z-index-base:				10000
 	);
 
 // Duration.
 	$duration: (
-		transition:					0.25s,
-		gallery-lightbox-fadein:	0.5s
+		transition:					0.25s
 	);
 
 // Size.
@@ -19,8 +17,7 @@
 		subheader-width:		22rem,
 		content-width:			60rem,
 		line-width:				2px,
-		form-gutter:			2rem,
-		gallery-gutter:			1.25rem,
+		form-gutter:			2rem
 	);
 
 // Font.
