--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3908,3 +3908,26 @@ input, select, textarea {
 		}
 
 	}
+
+	/* Project Images */
+	.project-image {
+		margin-bottom: 2rem;
+	}
+
+		.project-image img {
+			width: 100%;
+			max-width: 600px;
+			height: auto;
+			border-radius: 0.375rem;
+			transition: transform 0.25s ease-in-out;
+		}
+
+		.project-image img:hover {
+			transform: scale(1.02);
+		}
+
+		@media screen and (max-width: 736px) {
+			.project-image img {
+				max-width: 100%;
+			}
+		}
