--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3,40 +3,27 @@
 
 /* Paradigm Shift by HTML5 UP (html5up.net) | CCA 3.0 license */
 
-html, body, div, span, applet, object,
-iframe, h1, h2, h3, h4, h5, h6, p, blockquote,
-pre, a, abbr, acronym, address, big, cite,
-code, del, dfn, em, img, ins, kbd, q, s, samp,
-small, strike, strong, sub, sup, tt, var, b,
-u, i, center, dl, dt, dd, ol, ul, li, fieldset,
-form, label, legend, table, caption, tbody,
-tfoot, thead, tr, th, td, article, aside,
-canvas, details, embed, figure, figcaption,
-footer, header, hgroup, menu, nav, output, ruby,
-section, summary, time, mark, audio, video {
+/* Reset: only elements used on this page */
+html, body, div, span, h1, h2, h3, h4, p, a, strong, img, ul, li, form, label, input, textarea, section, header, footer {
 	margin: 0;
 	padding: 0;
 	border: 0;
 	font-size: 100%;
 	font: inherit;
-	vertical-align: baseline;}
+	vertical-align: baseline;
+}
 
-article, aside, details, figcaption, figure,
-footer, header, hgroup, menu, nav, section {
-	display: block;}
+section, header, footer {
+	display: block;
+}
 
 body {
 	line-height: 1;
 	-webkit-text-size-adjust: none;
 }
 
-ol, ul {
+ul {
 	list-style: none;
-}
-
-mark {
-	background-color: transparent;
-	color: inherit;
 }
 
 input::-moz-focus-inner {
@@ -185,7 +172,7 @@ input, textarea {
 		text-transform: uppercase;
 	}
 
-		h1 a, h2 a, h3 a, h4 a, h5 a, h6 a {
+		h1 a, h2 a, h3 a, h4 a {
 			color: inherit;
 			text-decoration: none;
 		}
