--- a/assets/sass/base/_reset.scss
+++ b/assets/sass/base/_reset.scss
@@ -3,21 +3,12 @@
 /// html5up.net | @ajlkn
 /// Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
 ///
+/// Trimmed: only elements used on this page (no table, dl, blockquote, etc.).
 
 // Reset.
 // Based on meyerweb.com/eric/tools/css/reset (v2.0 | 20110126 | License: public domain)
 
-	html, body, div, span, applet, object,
-	iframe, h1, h2, h3, h4, h5, h6, p, blockquote,
-	pre, a, abbr, acronym, address, big, cite,
-	code, del, dfn, em, img, ins, kbd, q, s, samp,
-	small, strike, strong, sub, sup, tt, var, b,
-	u, i, center, dl, dt, dd, ol, ul, li, fieldset,
-	form, label, legend, table, caption, tbody,
-	tfoot, thead, tr, th, td, article, aside,
-	canvas, details, embed, figure, figcaption,
-	footer, header, hgroup, menu, nav, output, ruby,
-	section, summary, time, mark, audio, video {
+	html, body, div, span, h1, h2, h3, h4, p, a, strong, img, ul, li, form, label, input, textarea, section, header, footer {
 		margin: 0;
 		padding: 0;
 		border: 0;
@@ -26,8 +17,7 @@
 		vertical-align: baseline;
 	}
 
-	article, aside, details, figcaption, figure,
-	footer, header, hgroup, menu, nav, section {
+	section, header, footer {
 		display: block;
 	}
 
@@ -35,32 +25,12 @@
 		line-height: 1;
 	}
 
-	ol, ul {
+	ul {
 		list-style: none;
-	}
-
-	blockquote,	q {
-		quotes: none;
-
-		&:before,
-		&:after {
-			content: '';
-			content: none;
-		}
-	}
-
-	table {
-		border-collapse: collapse;
-		border-spacing: 0;
 	}
 
 	body {
 		-webkit-text-size-adjust: none;
-	}
-
-	mark {
-		background-color: transparent;
-		color: inherit;
 	}
 
 	input::-moz-focus-inner {
@@ -68,7 +38,7 @@
 		padding: 0;
 	}
 
-	input, select, textarea {
+	input, textarea {
 		-moz-appearance: none;
 		-webkit-appearance: none;
 		-ms-appearance: none;
