--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,4 +1,4 @@
-@import url(fontawesome-all.min.css);
+@import url(fontawesome-brands.css);
 @import url("https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,700|Raleway:600,800");
 
 /* Paradigm Shift by HTML5 UP (html5up.net) | CCA 3.0 license */
