--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,4 +1,3 @@
-@import url(fontawesome-brands.css);
 @import url("https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,700|Raleway:600,800");
 
 /* Paradigm Shift by HTML5 UP (html5up.net) | CCA 3.0 license */
@@ -498,16 +497,20 @@ input, textarea {
 			text-rendering: auto;
 			line-height: 1;
 			text-transform: none !important;
-			font-family: 'Font Awesome 5 Free';
-			font-weight: 400;
 		}
 
 		.icon > .label {
 			display: none;
 		}
 
-		.icon.brands:before {
-			font-family: 'Font Awesome 5 Brands';
+		/* Footer social icons: Iconify (same as skills section) */
+		/* Footer social icons: keep small (global .iconify is 5em × 4em for skills) */
+		.icon.brands .iconify {
+			display: inline-block;
+			vertical-align: middle;
+			flex-shrink: 0;
+			width: 1.25rem !important;
+			height: 1.25rem !important;
 		} 
 
 /* Image */
@@ -700,7 +703,9 @@ input, textarea {
 				text-align: center;
 				line-height: 2.25rem;
 				border-radius: 2.25rem;
-				display: inline-block;
+				display: inline-flex;
+				align-items: center;
+				justify-content: center;
 			}
 
 				ul.icons li .icon:before {
