--- a/assets/sass/base/_typography.scss
+++ b/assets/sass/base/_typography.scss
@@ -31,7 +31,7 @@
 		color: _palette(fg);
 	}
 
-	body, input, select, textarea {
+	body, input, textarea {
 		color: _palette(fg-bold);
 		font-family: _font(family);
 		font-size: 1rem;
