--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,6 +1,6 @@
 @import url("https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,700|Raleway:600,800");
 
-/* Paradigm Shift by HTML5 UP (html5up.net) | CCA 3.0 license */
+/* Paradigm Shift by HTML5 UP (html5up.net) | CCA 3.0 license | Trimmed for this site: only used selectors */
 
 /* Reset: only elements used on this page */
 html, body, div, span, h1, h2, h3, h4, p, a, strong, img, ul, li, form, label, input, textarea, section, header, footer {
@@ -161,7 +161,7 @@ input, textarea {
 		margin: 0 0 2rem 0;
 	}
 
-	h1, h2, h3, h4, h5, h6 {
+	h1, h2, h3, h4 {
 		color: #000000;
 		font-family: "Raleway", Helvetica, sans-serif;
 		font-weight: 600;
@@ -244,17 +244,7 @@ input, textarea {
 
 	}
 
-	hr {
-		border: 0;
-		border-bottom: solid 2px rgba(144, 144, 144, 0.25);
-		margin: 3rem 0;
-	}
-
-
 	input[type="submit"],
-	input[type="reset"],
-	input[type="button"],
-	button,
 	.button {
 		-moz-appearance: none;
 		-webkit-appearance: none;
@@ -285,18 +275,12 @@ input, textarea {
 	}
 
 		input[type="submit"]:hover,
-		input[type="reset"]:hover,
-		input[type="button"]:hover,
-		button:hover,
 		.button:hover {
 			box-shadow: inset 0 0 0 2px #2ee4bb;
 			color: #2ee4bb !important;
 		}
 
 		input[type="submit"]:active,
-		input[type="reset"]:active,
-		input[type="button"]:active,
-		button:active,
 		.button:active {
 			background-color: rgba(73, 252, 212, 0.25);
 			box-shadow: inset 0 0 0 2px #2ee4bb;
@@ -304,9 +288,6 @@ input, textarea {
 		}
 
 		input[type="submit"].primary,
-		input[type="reset"].primary,
-		input[type="button"].primary,
-		button.primary,
 		.button.primary {
 			background-color: #49fcd4;
 			box-shadow: none;
@@ -314,17 +295,11 @@ input, textarea {
 		}
 
 			input[type="submit"].primary:hover,
-			input[type="reset"].primary:hover,
-			input[type="button"].primary:hover,
-			button.primary:hover,
 			.button.primary:hover {
 				background-color: #93ffe7;
 			}
 
 			input[type="submit"].primary:active,
-			input[type="reset"].primary:active,
-			input[type="button"].primary:active,
-			button.primary:active,
 			.button.primary:active {
 				background-color: #44f2cb;
 			}
@@ -332,9 +307,6 @@ input, textarea {
 		@media screen and (max-width: 736px) {
 
 			input[type="submit"],
-			input[type="reset"],
-			input[type="button"],
-			button,
 			.button {
 				font-size: 0.7rem;
 				height: 3.3rem;
@@ -503,7 +475,6 @@ input, textarea {
 			display: none;
 		}
 
-		/* Footer social icons: Iconify (same as skills section) */
 		/* Footer social icons: keep small (global .iconify is 5em × 4em for skills) */
 		.icon.brands .iconify {
 			display: inline-block;
@@ -673,9 +644,6 @@ input, textarea {
 					}
 
 					ul.actions:not(.fixed) li input[type="submit"],
-					ul.actions:not(.fixed) li input[type="reset"],
-					ul.actions:not(.fixed) li input[type="button"],
-					ul.actions:not(.fixed) li button,
 					ul.actions:not(.fixed) li .button {
 						width: 100%;
 					}
